@@ -12,6 +12,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.3-dev, SVN trunk):
 ------------------------------------
 
+- mapowscommon.c: output version string correctly (#2821)
+
 - Added removeLayer function to mapObj in PHP/MapScript. (#762)
 
 - Exposed PIXELS value via URL configuration
